<ul> 	<li>added login functionality</li> 	<li>login made mandatory for using the application</li> 	<li>no information can be seen without logging in</li> 	<li>if logged in, registeration and login links are hidden, and vice-versa</li> 	<li>appropriate success and warning messages displayed</li> 	<li>illegal access by directly entering links in browser made invalid</li> </ul>

--- a/python/blog.application/templates/home.html
+++ b/python/blog.application/templates/home.html
@@ -2,7 +2,8 @@
 
 {% block body %}
 		<div class="jumbotron text-center">
-			<h1>Blogging Website</h1>
-			<p class="lead">This is a sample blog website</p>
+			<h1>Welcome {{ session.username }}</h1>
 		</div>
+		<p class="lead">Users List</p>
+
 {% endblock %}
