--- a/python/blog.application/templates/includes/navbar.html
+++ b/python/blog.application/templates/includes/navbar.html
@@ -1,13 +1,23 @@
-<!-- NAVIGATION BAR -->
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">MyBlog</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="home">Home</a></li>
-      <li><a href="about">About</a></li>
-      <li><a href="blogs">Blogs</a></li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+  <a class="navbar-brand active" href="/">Blogger.com</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto">
+      {% if session.logged_in %}
+      <li class="nav-item"><a class="nav-link" href="home">Home</a></li>
+      {% endif %}
+      <li class="nav-item"><a class="nav-link" href="about">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="blogs">Blogs</a></li>
+    </ul>
+    <ul class="navbar-nav navbar-right">
+      {% if session.logged_in %}
+        <a href="logout" class="btn btn-danger" style="margin: 10px">Log Out</a>
+      {% else %}
+        <a href="login" class="btn btn-success" style="margin: 10px">LogIn</a>
+        <a href="register" class="btn btn-primary" style="margin: 10px">Register</a>
+      {% endif %}
     </ul>
   </div>
 </nav>
