--- a/python/blog.application/templates/layout.html
+++ b/python/blog.application/templates/layout.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<title>Blog Website</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+		<!-- Popper JS -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
+		<!-- Latest compiled JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	</head>
+
 	<body>
 		{% include 'includes/navbar.html' %}
 		<div class="container">
 			{% include 'includes/messages.html' %}
 			{% block body %}{% endblock %}
 		</div>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	</body>
+
 </html>
