--- a/python/blog.application/templates/login.html
+++ b/python/blog.application/templates/login.html
@@ -1,7 +1,18 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-		<div class="jumbotron text-center">
-			<h1>Login Page</h1>
-		</div>
+		
+		<h1>Log In</h1>
+		<form method="POST" action="">
+			<div class="form-group">
+				<label>Username</label>
+				<input type="text" class="form-control" name="username" value="{{request.form.username}}">
+			</div>
+			<div class="form-group">
+				<label>Password</label>
+				<input type="password" class="form-control" name="password" value="{{request.form.password}}">
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</form>
+		
 {% endblock %}
