--- a/python/blog.application/templates/layout.html
+++ b/python/blog.application/templates/layout.html
@@ -12,6 +12,9 @@
 
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+		<!-- ckeditor -->
+		<script src="https://cdn.ckeditor.com/4.10.1/standard/ckeditor.js"></script>
 	</head>
 
 	<body>
@@ -20,6 +23,10 @@
 			{% include 'includes/messages.html' %}
 			{% block body %}{% endblock %}
 		</div>
+
+		<script type="text/javascript">
+			CKEDITOR.replace('editor');
+		</script>
 	</body>
 
 </html>
