added the functionality for editing blogs added the functionality for deleting blogs added manual for database creation minor improvements in previous code

--- a/python/blog.application/templates/blogs.html
+++ b/python/blog.application/templates/blogs.html
@@ -2,14 +2,13 @@
 
 {% block body %}
 		<div class="jumbotron text-center">
-			<h1>Recent Blogs of {{ session.username }}</h1>
+			<h1>Recent blogs on the site</h1>
 		</div>
 
 		{% for blogs in blogs_list %}
 		<div>
-			<h3>{{ blogs.author }}</h3>
-			<small>posted on {{ blogs.create_date }}</small>
-			<a href="/blog/{{blogs.id}}">{{ blogs.title }}</a>
+			<h2><a href="/blog/{{blogs.id}}">{{ blogs.title }}</a></h2>
+			<small>posted by {{ blogs.author }} on {{ blogs.create_date }}</small>
 		</div>
 		<hr>
 		{% endfor %}
