--- a/python/blog.application/templates/home.html
+++ b/python/blog.application/templates/home.html
@@ -14,14 +14,19 @@
 				<th></th>
 				<th></th>
 			</tr>
-			{% for blogs in blogs_list %}
+			{% for blog in blogs_list %}
 				<tr>
-					<td>{{ blogs.id }}</td>
-					<td>{{ blogs.title }}</td>
-					<td>{{ blogs.author }}</td>
-					<td>{{ blogs.create_date }}</td>
-					<td><a href="/edit_blog/{{ blogs.id }}" class="btn btn-primary">Edit</a></td>
-					<td><a href="#" class="btn btn-danger">Delete</a></td>
+					<td>{{ blog.id }}</td>
+					<td>{{ blog.title }}</td>
+					<td>{{ blog.author }}</td>
+					<td>{{ blog.create_date }}</td>
+					<td><a href="/edit_blog/{{ blog.id }}" class="btn btn-primary">Edit</a></td>
+					<td>
+						<form action="{{ url_for('delete_blog', blog_id=blog.id) }}" method="post">
+							<input type="hidden" name="_method" value="DELETE">
+							<input type="submit" name="Delete" value="Delete" class="btn btn-danger">
+						</form>
+					</td>
 				</tr>
 			{% endfor %}
 			
