11 Dec commit 1). finalized template for finception

--- a/react_js/ReactCharts/public/finception.css
+++ b/react_js/ReactCharts/public/finception.css
@@ -1221,7 +1221,9 @@ select {
 
 .footer {
   background-color: #ffffff;
-  padding: 36pt 0; }
+  padding: 36pt 0;
+  z-index: 99;
+}
 
 .footer__inner {
   -js-display: flex;
